--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url= jdbc:postgresql://localhost:15432/postgres
+# spring.datasource.url= jdbc:postgresql://teste-postgres-compose:5432/postgres
 spring.datasource.username= postgres
 spring.datasource.password= Postgres2018!
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
