--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.thymeleaf.cache=true
 # spring.jpa.hibernate.ddl-auto= update
 # spring.datasource.username= postgres
 # spring.datasource.password= Postgres2018!
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
