--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.7.RELEASE</version>
+		<version>2.7.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.almeida</groupId>
@@ -13,6 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>parking-control-application</name>
 	<description>Demo project for Spring Boot</description>
+	<!-- <properties>
+		<java.version>17</java.version>
+	</properties> -->
 	<properties>
 		<java.version>11</java.version>
 	</properties>
